--- a/package.json
+++ b/package.json
@@ -23,12 +23,18 @@
   "author": "Ezequiel Moreno",
   "license": "ISC",
   "dependencies": {
+    "@types/dotenv": "^6.1.1",
+    "@types/mongoose": "^5.5.19",
+    "@types/request": "^2.48.3",
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "googleapis": "^39.2.0",
     "mercadolibre": "0.0.13",
     "mongoose": "^5.7.3",
-    "request-promise": "^4.2.4"
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
+    "ts-mongoose": "0.0.19"
   },
   "devDependencies": {
     "@types/express": "^4.17.1",
